--- a/service/security/audit-information-provision-to-consumers.yml
+++ b/service/security/audit-information-provision-to-consumers.yml
@@ -5,9 +5,9 @@ Audit information provision to consumers:
     hint: "Do you provide audit information to consumers?"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
-      - type: radios
-        options:
-          - "None"
-          - "Data made available"
-          - "Data made available by negotiation"
-
+      - type: radio
+        label: "None"
+      - type: radio
+        label: "Data made available"
+      - type: radio
+        label: "Data made available by negotiation"
