--- a/service/security/data-in-transit-protection.yml
+++ b/service/security/data-in-transit-protection.yml
@@ -2,7 +2,7 @@ Data-in-transit protection:
   "Data protection between user device and service":
     requirements: Data in transit is protected between the user’s devices and the service
     filters: Data in transit is protected between the user’s devices and the service
-    hint: ""
+    hint: "Choose 1"
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radio
@@ -26,7 +26,7 @@ Data-in-transit protection:
   "Data protection within service":
     requirements: Data in transit is protected internally within the service
     filters: Data in transit is protected internally within the service
-    hint: ""
+    hint: "Choose 1"
     dependsOnLots: PaaS, IaaS
     fields:
       - type: radio
