--- a/service/security/identity-and-authentication.yml
+++ b/service/security/identity-and-authentication.yml
@@ -2,7 +2,7 @@ Identity and authentication:
   "Identity and authentication controls":
     requirements: Consumers should have sufficient confidence that identity and authentication controls ensure users are authorised to access specific interfaces.
     filters: Consumers should have sufficient confidence that identity and authentication controls ensure users are authorised to access specific interfaces.
-    hint: "Do your identity and authentication controls provide an appropriate level of confidence that a user has authorisation to access a specific interface?"
+    hint: "What kind of identity and authentication controls do you use to provide an appropriate level of confidence that a user has authorisation to access a specific interface? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radio
