--- a/service/security/secure-service-administration.yml
+++ b/service/security/secure-service-administration.yml
@@ -2,7 +2,7 @@ Secure service administration:
   "Service management model":
     requirements: Consumers have sufficient confidence that the technical approach the service provider uses to manage the service does not put their data or service at risk.
     filters: Consumers have sufficient confidence that the technical approach the service provider uses to manage the service does not put their data or service at risk.
-    hint: ""
+    hint: "Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radio
