--- a/service/security/audit-information-provision-to-consumers.yml
+++ b/service/security/audit-information-provision-to-consumers.yml
@@ -2,7 +2,7 @@ Audit information provision to consumers:
   "Audit information provided":
     requirements: Consumers are aware of the audit information that will be provided to them, how and when it will be made available to them, the format of the data, and the retention period associated with it.
     filters: Consumers are aware of the audit information that will be provided to them, how and when it will be made available to them, the format of the data, and the retention period associated with it.
-    hint: "Do you provide audit information to consumers?"
+    hint: "Do you provide audit information to consumers? Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radio
