--- a/service/service-type-IaaS.yml
+++ b/service/service-type-IaaS.yml
@@ -1,7 +1,7 @@
 Service type:
   Choose the categories that apply to your service:
     dependsOnLots: IaaS
-    hint: "You can choose multiple categories"
+    hint: "Choose all that apply."
     mockAnswer: Compute
     fields:
       - type: checkbox
