added full stop.

--- a/service/api-access.yml
+++ b/service/api-access.yml
@@ -5,6 +5,6 @@ API access:
       - type: boolean
   API type:
     dependsOnLots: SaaS, PaaS, IaaS
-    hint: "Examples of API include RESTful and SOAP"
+    hint: "Examples of API include RESTful and SOAP."
     fields:
       - type: text
