--- a/service/pricing.yml
+++ b/service/pricing.yml
@@ -65,12 +65,12 @@ Pricing:
   Pricing document:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     mockAnswer: Pricing Document Umbraco 102014.odf
-    hint: "Please upload your pricing document if you have one. Use an open document format."
+    hint: "Please upload your pricing document. Use an open document format, eg odf, pdf or pda. (Maximum file size 5MB.)"
     fields:
       - type: upload
   Skills Framework for the Information Age (SFIA) rate card:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     mockAnswer: Rate Card Umbraco 102014.odf
-    hint: "Please upload your SFIA rate card if you have one. Use an open document format."
+    hint: "Please upload your SFIA rate card if you have one. Use an open document format, eg odf, pdf or pda. (Maximum file size 5MB.)"
     fields:
       - type: upload
