Added hint (choose all)

--- a/service/security/external-interface-protection.yml
+++ b/service/security/external-interface-protection.yml
@@ -9,7 +9,7 @@ External interface protection:
   "Interconnection method provided":
     requirements: The consumer understands what physical and logical interfaces their information is available from.
     filters: The consumer understands what physical and logical interfaces their information is available from.
-    hint: "What method of interconnection do you provide?"
+    hint: "What method of interconnection do you provide? Choose all that apply."
     dependsOnLots: PaaS, IaaS
     fields:
       - type: checkbox
