--- a/service/security/personnel-security.yml
+++ b/service/security/personnel-security.yml
@@ -5,14 +5,14 @@ Personnel security:
     hint: "What kind of personnel security do you apply to staff who have access to the service? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
-      - type: radio
+      - type: checkbox
         label: "Developed vetting"
-      - type: radio
+      - type: checkbox
         label: "Security clearance vetting"
-      - type: radio
+      - type: checkbox
         label: "Baseline personnel security standard (BPSS)"
-      - type: radio
+      - type: checkbox
         label: "Background checks in accordance with BS7858:2012"
-      - type: radio
+      - type: checkbox
         label: "Employment checks"
       - type: assurance
